test/continue.jk
// This is a test file for continue statement in joker language.

var i = 0;
while(i < 10) {
    i = i + 1;
    if(i < 5) {
        continue;
    }
    
    print i;
}

// Output: 5 6 7 8 9 10
print "End of program";


var j = 0;
for(; j < 10; j = j + 1) {
    if(j < 5) {
        continue;
    }
    print j;
}

// Output: 5 6 7 8 9 
print "End of program";


if (true) {
    print "This is a test";
    continue;   // error: continue statement is not allowed inside if statement
    print "This line will not be executed";
}
